Changed backend css style for choicetype with expanded=true to prevent word wrap between a checkbox and its label

--- a/src/Enhavo/Bundle/AppBundle/Resources/public/sass/_form.scss
+++ b/src/Enhavo/Bundle/AppBundle/Resources/public/sass/_form.scss
@@ -1,7 +1,10 @@
 .choice-list .choice-input-with-label {display: block;margin-bottom: 3px;}
 
-.choice-input-container {padding-top:3px;}
-.choice-input-container label {padding-right:10px;}
+.choice-input-container {
+    padding-top:3px;
+    label {padding-right:10px;}
+    .choice-input-with-label {display: inline-block;white-space:nowrap;}
+}
 
 /* input container */
 
